syntax = "proto3";

option csharp_namespace = "DemoApp.DAL";

package worker;
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service WorkerCRUD {

  rpc ListWorkers(google.protobuf.Empty) returns (ListReply);
  rpc ListStat(google.protobuf.Empty) returns (ListStatReply);
  rpc GetWorker(GetWorkerRequest) returns (WorkerReply);
  rpc CreateWorker(WorkerReply) returns (WorkerReply);
  rpc UpdateWorker(WorkerReply) returns (WorkerReply);
  rpc DeleteWorker(DeleteWorkerRequest) returns (BoolReply);
  rpc CheckDB(google.protobuf.Empty) returns (CheckReply);
  rpc ReCreateDB(google.protobuf.Empty) returns (CheckReply);

  rpc ListChilds(google.protobuf.Empty) returns (ListChildReply);
  rpc GetChild(GetChildRequest) returns (ChildReply);
  rpc CreateChild(ChildReply) returns (ChildReply);
  rpc UpdateChild(ChildReply) returns (ChildReply);
  rpc DeleteChild(DeleteChildRequest) returns (BoolReply);

  rpc ClientDataStream (stream WorkerReply) returns (CheckReply);

}
 
message CheckReply{
  string Mes=1;
}

message GetWorkerRequest{
  int32 Id = 1;
}
 
message DeleteWorkerRequest{
  int32 Id = 1;
}

message BoolReply{
	bool Result = 1;
} 

message ListReply{
  repeated WorkerReply Workers = 1;
}
message ListStatReply{
  repeated StatReply Stats = 1;
}
 
message WorkerReply{
  int32 Id = 1;
  string SurName = 2;
  string FirstName = 3;
  string LastName = 4;
  google.protobuf.Timestamp BirthDay = 5;
  bool Pol = 6;
  repeated ChildReply Childs = 7;
}

message ChildReply{
  int32 Id = 1;
  string FullName=2;
  google.protobuf.Timestamp BirthDay = 3;
  int32 WorkerId = 4;
}

message StatReply{
  string FullName = 1;
  google.protobuf.Timestamp BirthDay = 2;
  int32 ChildCount = 3;
}

message ListChildReply{
  repeated ChildReply Childs = 1;
}
message GetChildRequest{
  int32 Id = 1;
}
 
message DeleteChildRequest{
  int32 Id = 1;
}